# zkcarel_protocol

./: .gitignore  DEMO.md  LICENSE  README.md  TOKENOMICS.md  docker-compose.yml
backend-rust/: "garaga_proof.json"  "garaga_public_inputs.json"  .dockerignore  .env  .gitignore  BE_TEST_REPORT.md  Cargo.toml  Dockerfile  README.md  deploy.env  docker  docker-compose..yml  garaga_payload.json  garaga_proof.json  garaga_proof_raw.json  garaga_public_inputs.json  garaga_public_inputs_raw.json  garaga_vk.json  tmp_proof_check.json  tmp_public_check.json
backend-rust/garaga-real-prover/: Cargo.toml  garaga_proof.json  garaga_public_inputs.json  prove.py
backend-rust/garaga-real-prover/src/: main.rs
backend-rust/migrations/: 20260207061639_init_schema.sql  20260212103000_multi_wallet_and_private_tx.sql  20260212164000_sumo_subject_identity.sql  20260216171000_wallet_address_case_insensitive_unique.sql  20260216184000_scaling_indexes.sql  20260220150000_ai_levels.sql  20260223193000_nft_discount_state.sql  20260310021500_add_spent_points_to_points.sql
backend-rust/scripts/: ai_e2e_production_testnet.sh  garaga_auto_prover.py  garaga_prove_static.py  smoke_test_api.sh
backend-rust/src/: bridge_worker.rs  config.rs  constants.rs  error.rs  main.rs  tokenomics.rs  utils.rs
backend-rust/src/api/: admin.rs  ai.rs  analytics.rs  anonymous_credentials.rs  auth.rs  battleship.rs  bridge.rs  charts.rs  dark_pool.rs  deposit.rs  faucet.rs  garden.rs  health.rs  leaderboard.rs  limit_order.rs  market.rs  mod.rs  nft.rs  notifications.rs  onchain_privacy.rs  portfolio.rs  privacy.rs  private_btc_swap.rs  private_payments.rs  profile.rs  referral.rs  rewards.rs  social.rs  stake.rs  swap.rs  transactions.rs  wallet.rs  webhooks.rs
backend-rust/src/crypto/: hash.rs  mod.rs  signature.rs
docs/: DEPLOY_TESTNET.md  (+23 more)
(+413 files in other folders)
