[package]
name = "carel-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rs_merkle = "1.4"
sha3 = "0.10"
hex = "0.4"
starknet = "0.17.0"
starknet-providers = "0.16.0"
starknet-core = "0.16.0"
starknet-signers = "0.14.0"
starknet-accounts = "0.16.0"
url = "2.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json", "rust_decimal"] }
starknet-crypto = "0.8.1"
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.40.0", features = ["serde-float"] }
anyhow = "1.0.101"
redis = { version = "1.0.3", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.13.1", features = ["json"] }
rand = "0.9.2"
jsonwebtoken = "10.3.0"        
tracing = "0.1"            
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
thiserror = "2.0.18"
async-trait = "0.1"        
futures-util = "0.3" 
dotenv = "0.15.0"
ethers = "2.0.14"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
r2d2 = "0.8"
r2d2_redis = "0.14"
dotenvy = "0.15"
