[package]
name = "garaga-real-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
clap = { version = "4.5", features = ["derive"] }
num-bigint = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
